antlr/KrecikParser.py
# Generated from Krecik.g4 by ANTLR 4.12.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class KrecikParser ( Parser ):

    grammarFileName = "Krecik.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "','", "'{'", "'}'", "';'", 
                     "'+'", "'-'", "'*'", "'/'", "'='", "'cislo'", "'cely'", 
                     "'logicki'", "'ne'", "'nebo'", "'oba'", "'je'", "'neje'", 
                     "'wetsi'", "'mensi'", "'kdyz'", "'pak'", "'opakujte'", 
                     "'az'", "'vratit'", "'nedostatek'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'\\t'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "Cislo", "Cely", "Logicki", "Ne", "Nebo", "Oba", "Je", 
                      "Neje", "Wetsi", "Mensi", "Kdyz", "Pak", "Opakujte", 
                      "Az", "Vratit", "Nedostatek", "SP", "NEWLINE", "COMMENT", 
                      "VARIABLE_NAME", "FLOAT_VAL", "INT_VAL", "BOOLEAN_VAL", 
                      "TAB" ]

    RULE_primary_expression = 0
    RULE_functions_declarations_list = 1
    RULE_function_declaration = 2
    RULE_declaration_arg_list = 3
    RULE_body = 4
    RULE_body_items_list = 5
    RULE_body_item = 6
    RULE_body_line = 7
    RULE_expression = 8
    RULE_function_call = 9
    RULE_expressions_list = 10
    RULE_vratit = 11
    RULE_conditional_instruction = 12
    RULE_loop_instruction = 13
    RULE_instruction = 14
    RULE_unary_operator = 15
    RULE_binary_operator = 16
    RULE_numeric_unary_operator = 17
    RULE_numeric_binary_operator = 18
    RULE_boolean_unary_operator = 19
    RULE_boolean_binary_operator = 20
    RULE_comparison_operator = 21
    RULE_return_var_type = 22
    RULE_var_type = 23
    RULE_declaration = 24
    RULE_literal = 25
    RULE_assignment = 26
    RULE_variable = 27

    ruleNames =  [ "primary_expression", "functions_declarations_list", 
                   "function_declaration", "declaration_arg_list", "body", 
                   "body_items_list", "body_item", "body_line", "expression", 
                   "function_call", "expressions_list", "vratit", "conditional_instruction", 
                   "loop_instruction", "instruction", "unary_operator", 
                   "binary_operator", "numeric_unary_operator", "numeric_binary_operator", 
                   "boolean_unary_operator", "boolean_binary_operator", 
                   "comparison_operator", "return_var_type", "var_type", 
                   "declaration", "literal", "assignment", "variable" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    Cislo=12
    Cely=13
    Logicki=14
    Ne=15
    Nebo=16
    Oba=17
    Je=18
    Neje=19
    Wetsi=20
    Mensi=21
    Kdyz=22
    Pak=23
    Opakujte=24
    Az=25
    Vratit=26
    Nedostatek=27
    SP=28
    NEWLINE=29
    COMMENT=30
    VARIABLE_NAME=31
    FLOAT_VAL=32
    INT_VAL=33
    BOOLEAN_VAL=34
    TAB=35

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.12.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Primary_expressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def functions_declarations_list(self):
            return self.getTypedRuleContext(KrecikParser.Functions_declarations_listContext,0)


        def EOF(self):
            return self.getToken(KrecikParser.EOF, 0)

        def SP(self, i:int=None):
            if i is None:
                return self.getTokens(KrecikParser.SP)
            else:
                return self.getToken(KrecikParser.SP, i)

        def getRuleIndex(self):
            return KrecikParser.RULE_primary_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrimary_expression" ):
                listener.enterPrimary_expression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrimary_expression" ):
                listener.exitPrimary_expression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrimary_expression" ):
                return visitor.visitPrimary_expression(self)
            else:
                return visitor.visitChildren(self)




    def primary_expression(self):

        localctx = KrecikParser.Primary_expressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_primary_expression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==28:
                self.state = 56
                self.match(KrecikParser.SP)
                self.state = 61
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 62
            self.functions_declarations_list()
            self.state = 66
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==28:
                self.state = 63
                self.match(KrecikParser.SP)
                self.state = 68
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 69
            self.match(KrecikParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Functions_declarations_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function_declaration(self):
            return self.getTypedRuleContext(KrecikParser.Function_declarationContext,0)


        def functions_declarations_list(self):
            return self.getTypedRuleContext(KrecikParser.Functions_declarations_listContext,0)


        def SP(self, i:int=None):
            if i is None:
                return self.getTokens(KrecikParser.SP)
            else:
                return self.getToken(KrecikParser.SP, i)

        def getRuleIndex(self):
            return KrecikParser.RULE_functions_declarations_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctions_declarations_list" ):
                listener.enterFunctions_declarations_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctions_declarations_list" ):
                listener.exitFunctions_declarations_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctions_declarations_list" ):
                return visitor.visitFunctions_declarations_list(self)
            else:
                return visitor.visitChildren(self)




    def functions_declarations_list(self):

        localctx = KrecikParser.Functions_declarations_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_functions_declarations_list)
        self._la = 0 # Token type
        try:
            self.state = 81
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 71
                self.function_declaration()
                self.state = 75
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==28:
                    self.state = 72
                    self.match(KrecikParser.SP)
                    self.state = 77
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 78
                self.functions_declarations_list()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 80
                self.function_declaration()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def return_var_type(self):
            return self.getTypedRuleContext(KrecikParser.Return_var_typeContext,0)


        def SP(self, i:int=None):
            if i is None:
                return self.getTokens(KrecikParser.SP)
            else:
                return self.getToken(KrecikParser.SP, i)

        def VARIABLE_NAME(self):
            return self.getToken(KrecikParser.VARIABLE_NAME, 0)

        def body(self):
            return self.getTypedRuleContext(KrecikParser.BodyContext,0)


        def declaration_arg_list(self):
            return self.getTypedRuleContext(KrecikParser.Declaration_arg_listContext,0)


        def getRuleIndex(self):
            return KrecikParser.RULE_function_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_declaration" ):
                listener.enterFunction_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_declaration" ):
                listener.exitFunction_declaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_declaration" ):
                return visitor.visitFunction_declaration(self)
            else:
                return visitor.visitChildren(self)




    def function_declaration(self):

        localctx = KrecikParser.Function_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_function_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.return_var_type()
            self.state = 84
            self.match(KrecikParser.SP)
            self.state = 85
            self.match(KrecikParser.VARIABLE_NAME)
            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==28:
                self.state = 86
                self.match(KrecikParser.SP)
                self.state = 91
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 92
            self.match(KrecikParser.T__0)
            self.state = 96
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 93
                    self.match(KrecikParser.SP) 
                self.state = 98
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

            self.state = 100
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 28672) != 0):
                self.state = 99
                self.declaration_arg_list()


            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==28:
                self.state = 102
                self.match(KrecikParser.SP)
                self.state = 107
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 108
            self.match(KrecikParser.T__1)
            self.state = 112
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==28:
                self.state = 109
                self.match(KrecikParser.SP)
                self.state = 114
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 115
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Declaration_arg_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self):
            return self.getTypedRuleContext(KrecikParser.DeclarationContext,0)


        def declaration_arg_list(self):
            return self.getTypedRuleContext(KrecikParser.Declaration_arg_listContext,0)


        def SP(self, i:int=None):
            if i is None:
                return self.getTokens(KrecikParser.SP)
            else:
                return self.getToken(KrecikParser.SP, i)

        def getRuleIndex(self):
            return KrecikParser.RULE_declaration_arg_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration_arg_list" ):
                listener.enterDeclaration_arg_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration_arg_list" ):
                listener.exitDeclaration_arg_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration_arg_list" ):
                return visitor.visitDeclaration_arg_list(self)
            else:
                return visitor.visitChildren(self)




    def declaration_arg_list(self):

        localctx = KrecikParser.Declaration_arg_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declaration_arg_list)
        self._la = 0 # Token type
        try:
            self.state = 134
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 117
                self.declaration()
                self.state = 121
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==28:
                    self.state = 118
                    self.match(KrecikParser.SP)
                    self.state = 123
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 124
                self.match(KrecikParser.T__2)
                self.state = 128
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==28:
                    self.state = 125
                    self.match(KrecikParser.SP)
                    self.state = 130
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 131
                self.declaration_arg_list()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 133
                self.declaration()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SP(self, i:int=None):
            if i is None:
                return self.getTokens(KrecikParser.SP)
            else:
                return self.getToken(KrecikParser.SP, i)

        def body_items_list(self):
            return self.getTypedRuleContext(KrecikParser.Body_items_listContext,0)


        def vratit(self):
            return self.getTypedRuleContext(KrecikParser.VratitContext,0)


        def getRuleIndex(self):
            return KrecikParser.RULE_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBody" ):
                listener.enterBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBody" ):
                listener.exitBody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBody" ):
                return visitor.visitBody(self)
            else:
                return visitor.visitChildren(self)




    def body(self):

        localctx = KrecikParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.match(KrecikParser.T__3)
            self.state = 140
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,12,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 137
                    self.match(KrecikParser.SP) 
                self.state = 142
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,12,self._ctx)

            self.state = 144
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 32233288066) != 0):
                self.state = 143
                self.body_items_list()


            self.state = 149
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,14,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 146
                    self.match(KrecikParser.SP) 
                self.state = 151
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,14,self._ctx)

            self.state = 153
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==26:
                self.state = 152
                self.vratit()


            self.state = 158
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==28:
                self.state = 155
                self.match(KrecikParser.SP)
                self.state = 160
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 161
            self.match(KrecikParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Body_items_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def body_item(self):
            return self.getTypedRuleContext(KrecikParser.Body_itemContext,0)


        def body_items_list(self):
            return self.getTypedRuleContext(KrecikParser.Body_items_listContext,0)


        def SP(self, i:int=None):
            if i is None:
                return self.getTokens(KrecikParser.SP)
            else:
                return self.getToken(KrecikParser.SP, i)

        def getRuleIndex(self):
            return KrecikParser.RULE_body_items_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBody_items_list" ):
                listener.enterBody_items_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBody_items_list" ):
                listener.exitBody_items_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBody_items_list" ):
                return visitor.visitBody_items_list(self)
            else:
                return visitor.visitChildren(self)




    def body_items_list(self):

        localctx = KrecikParser.Body_items_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_body_items_list)
        self._la = 0 # Token type
        try:
            self.state = 173
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,18,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 163
                self.body_item()
                self.state = 167
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==28:
                    self.state = 164
                    self.match(KrecikParser.SP)
                    self.state = 169
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 170
                self.body_items_list()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 172
                self.body_item()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Body_itemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def body_line(self):
            return self.getTypedRuleContext(KrecikParser.Body_lineContext,0)


        def SP(self, i:int=None):
            if i is None:
                return self.getTokens(KrecikParser.SP)
            else:
                return self.getToken(KrecikParser.SP, i)

        def instruction(self):
            return self.getTypedRuleContext(KrecikParser.InstructionContext,0)


        def body(self):
            return self.getTypedRuleContext(KrecikParser.BodyContext,0)


        def getRuleIndex(self):
            return KrecikParser.RULE_body_item

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBody_item" ):
                listener.enterBody_item(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBody_item" ):
                listener.exitBody_item(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBody_item" ):
                return visitor.visitBody_item(self)
            else:
                return visitor.visitChildren(self)




    def body_item(self):

        localctx = KrecikParser.Body_itemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_body_item)
        self._la = 0 # Token type
        try:
            self.state = 193
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 7, 8, 12, 13, 14, 15, 31, 32, 33, 34]:
                self.enterOuterAlt(localctx, 1)
                self.state = 175
                self.body_line()
                self.state = 179
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==28:
                    self.state = 176
                    self.match(KrecikParser.SP)
                    self.state = 181
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 182
                self.match(KrecikParser.T__5)
                pass
            elif token in [22, 24]:
                self.enterOuterAlt(localctx, 2)
                self.state = 184
                self.instruction()
                self.state = 188
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==28:
                    self.state = 185
                    self.match(KrecikParser.SP)
                    self.state = 190
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 191
                self.body()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Body_lineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(KrecikParser.ExpressionContext,0)


        def declaration(self):
            return self.getTypedRuleContext(KrecikParser.DeclarationContext,0)


        def assignment(self):
            return self.getTypedRuleContext(KrecikParser.AssignmentContext,0)


        def getRuleIndex(self):
            return KrecikParser.RULE_body_line

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBody_line" ):
                listener.enterBody_line(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBody_line" ):
                listener.exitBody_line(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBody_line" ):
                return visitor.visitBody_line(self)
            else:
                return visitor.visitChildren(self)




    def body_line(self):

        localctx = KrecikParser.Body_lineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_body_line)
        try:
            self.state = 198
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,22,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 195
                self.expression(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 196
                self.declaration()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 197
                self.assignment()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(KrecikParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(KrecikParser.ExpressionContext,i)


        def SP(self, i:int=None):
            if i is None:
                return self.getTokens(KrecikParser.SP)
            else:
                return self.getToken(KrecikParser.SP, i)

        def unary_operator(self):
            return self.getTypedRuleContext(KrecikParser.Unary_operatorContext,0)


        def function_call(self):
            return self.getTypedRuleContext(KrecikParser.Function_callContext,0)


        def VARIABLE_NAME(self):
            return self.getToken(KrecikParser.VARIABLE_NAME, 0)

        def literal(self):
            return self.getTypedRuleContext(KrecikParser.LiteralContext,0)


        def binary_operator(self):
            return self.getTypedRuleContext(KrecikParser.Binary_operatorContext,0)


        def getRuleIndex(self):
            return KrecikParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = KrecikParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 16
        self.enterRecursionRule(localctx, 16, self.RULE_expression, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 229
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,26,self._ctx)
            if la_ == 1:
                self.state = 201
                self.match(KrecikParser.T__0)
                self.state = 205
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==28:
                    self.state = 202
                    self.match(KrecikParser.SP)
                    self.state = 207
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 208
                self.expression(0)
                self.state = 212
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==28:
                    self.state = 209
                    self.match(KrecikParser.SP)
                    self.state = 214
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 215
                self.match(KrecikParser.T__1)
                pass

            elif la_ == 2:
                self.state = 217
                self.unary_operator()
                self.state = 221
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==28:
                    self.state = 218
                    self.match(KrecikParser.SP)
                    self.state = 223
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 224
                self.expression(5)
                pass

            elif la_ == 3:
                self.state = 226
                self.function_call()
                pass

            elif la_ == 4:
                self.state = 227
                self.match(KrecikParser.VARIABLE_NAME)
                pass

            elif la_ == 5:
                self.state = 228
                self.literal()
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 249
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,29,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = KrecikParser.ExpressionContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                    self.state = 231
                    if not self.precpred(self._ctx, 4):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                    self.state = 235
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==28:
                        self.state = 232
                        self.match(KrecikParser.SP)
                        self.state = 237
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)

                    self.state = 238
                    self.binary_operator()
                    self.state = 242
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==28:
                        self.state = 239
                        self.match(KrecikParser.SP)
                        self.state = 244
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)

                    self.state = 245
                    self.expression(5) 
                self.state = 251
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,29,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Function_callContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARIABLE_NAME(self):
            return self.getToken(KrecikParser.VARIABLE_NAME, 0)

        def SP(self, i:int=None):
            if i is None:
                return self.getTokens(KrecikParser.SP)
            else:
                return self.getToken(KrecikParser.SP, i)

        def expressions_list(self):
            return self.getTypedRuleContext(KrecikParser.Expressions_listContext,0)


        def getRuleIndex(self):
            return KrecikParser.RULE_function_call

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_call" ):
                listener.enterFunction_call(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_call" ):
                listener.exitFunction_call(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_call" ):
                return visitor.visitFunction_call(self)
            else:
                return visitor.visitChildren(self)




    def function_call(self):
